@@ -823,6 +823,12 @@ argument_list|)
 expr_stmt|;
 comment|// Up number of retries.  Needed while cluster starts up. Its been set to 1
 comment|// above.
+specifier|final
+name|int
+name|retries
+init|=
+literal|5
+decl_stmt|;
 name|this
 operator|.
 name|conf
@@ -833,7 +839,7 @@ name|HConstants
 operator|.
 name|HBASE_CLIENT_RETRIES_NUMBER_KEY
 argument_list|,
-literal|3
+name|retries
 argument_list|)
 expr_stmt|;
 name|MiniHBaseCluster
@@ -942,22 +948,14 @@ name|info
 argument_list|(
 name|TABLENAME
 operator|+
-literal|" exists.  Creating an HTable to go against "
+literal|" exists.  Now waiting till startcode "
 operator|+
-name|TABLENAME
-operator|+
-literal|" and master "
-operator|+
-name|this
-operator|.
-name|conf
-operator|.
-name|get
-argument_list|(
-name|HConstants
-operator|.
-name|MASTER_ADDRESS
+literal|"changes before opening a scanner"
 argument_list|)
+expr_stmt|;
+name|waitOnStartCodeChange
+argument_list|(
+name|retries
 argument_list|)
 expr_stmt|;
 name|HTable
@@ -978,28 +976,6 @@ name|count
 init|=
 literal|0
 decl_stmt|;
-try|try
-block|{
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|10000
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
 name|LOG
 operator|.
 name|info
@@ -1096,6 +1072,173 @@ operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+block|}
+block|}
+comment|/*    * Wait till the startcode changes before we put up a scanner.  Otherwise    * we tend to hang, at least on hudson and I've had it time to time on    * my laptop.  The hang is down in RPC Client doing its call.  It    * never returns though the socket has a read timeout of 60 seconds by    * default. St.Ack    * @param retries How many retries to run.    * @throws IOException    */
+specifier|private
+name|void
+name|waitOnStartCodeChange
+parameter_list|(
+specifier|final
+name|int
+name|retries
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HTable
+name|m
+init|=
+operator|new
+name|HTable
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|,
+name|HConstants
+operator|.
+name|META_TABLE_NAME
+argument_list|)
+decl_stmt|;
+comment|// This is the start code that is in the old data.
+name|long
+name|oldStartCode
+init|=
+literal|1199736332062L
+decl_stmt|;
+comment|// This is the first row for the TestTable that is in the old data.
+name|byte
+index|[]
+name|row
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"TestUpgrade,,1199736362468"
+argument_list|)
+decl_stmt|;
+name|long
+name|pause
+init|=
+name|conf
+operator|.
+name|getLong
+argument_list|(
+literal|"hbase.client.pause"
+argument_list|,
+literal|5
+operator|*
+literal|1000
+argument_list|)
+decl_stmt|;
+name|long
+name|startcode
+init|=
+operator|-
+literal|1
+decl_stmt|;
+name|boolean
+name|changed
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|retries
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|startcode
+operator|=
+name|Writables
+operator|.
+name|cellToLong
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+name|row
+argument_list|,
+name|HConstants
+operator|.
+name|COL_STARTCODE
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|startcode
+operator|!=
+name|oldStartCode
+condition|)
+block|{
+name|changed
+operator|=
+literal|true
+expr_stmt|;
+break|break;
+block|}
+if|if
+condition|(
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+operator|!=
+name|retries
+condition|)
+block|{
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|pause
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+comment|// continue
+block|}
+block|}
+block|}
+comment|// If after all attempts startcode has not changed, fail.
+if|if
+condition|(
+operator|!
+name|changed
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Startcode didn't change after "
+operator|+
+name|retries
+operator|+
+literal|" attempts"
+argument_list|)
+throw|;
 block|}
 block|}
 specifier|private
