@@ -28,6 +28,7 @@ Hbase Change Log
                write-ahead-log edits
    HBASE-646   EOFException opening HStoreFile info file (spin on HBASE-645and 550)
    HBASE-648   If mapfile index is empty, run repair
+   HBASE-640   TestMigrate failing on hudson
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
